style: added margin and padding

--- a/style.css
+++ b/style.css
@@ -41,20 +41,30 @@ a{
 .container{
     text-align: center;
     margin-top: 10vh;
-    margin-left: 6rem;
-    margin-right: 6rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     margin-bottom: 10vh;
     color:1px solid black;
     padding-top: 10px;
     padding-bottom: 30px;
    
    }
+
+   .question-container{
+    
+     margin: 1rem;
+     padding: 1rem;
+   }
+   .ow{
+     background-color: #f5eff2;
+   }
    button{
-     border: 1px solid black;
+     border: 1px solid #F472B6;
      padding: 3px;
      font-weight: bolder;
      border-radius: 5px;
      margin: 1rem;
+     color: #F472B6;
 
    }
    input{
@@ -65,7 +75,11 @@ a{
      margin: 1rem;
      padding: 1rem;
    } */
-   
+   .questionImage{
+     height: 25vh;
+     margin: auto;
+     text-align: center;
+   }
    .footer{
     background-color:   
     #111827;
